--- a/document.tex
+++ b/document.tex
@@ -390,7 +390,7 @@ The hand gestures could be done with bare hands, but we notice that in environme
 resemble the skin hue, hand gesture recognition performance would suffer. Using a glove with a distinctive color, not 
 present in the rest of the environment enhanced hand recognition performance.
 
-This manuscript's associated video \footnote{\url{http://www.youtube.com/watch?v=tBOfvZboGfk}} provides a good visual
+This manuscript's associated video \footnote{\url{http://youtu.be/SGqF1Mi6JGI}} provides a good visual
 overview of the system at work and how it is being used by two different users to interact with a computer, a breadboard
 with a set of light emitting diodes and with a robot.
 
@@ -431,7 +431,7 @@ view of the scene camera as long as the arm was stretched in front of the user.
 
 
 Further work should strive to carry out an extensive quantitative analysis of the performance of the system within a
-large user study. More shopisticated hand gestures can also be envisioned. However, complex gaze gestures generate a
+large user study. More sophisticated hand gestures can also be envisioned. However, complex gaze gestures generate a
 cognitive and physiological load on the user. Cognitively it is difficult for users to remember a large set of complex
 gestures, and physiologically it is tiring and challenging to complete them. Finding the right trade-off between simple
 and complex hand gestures is therefore paramount to successfully use hand gestures as a control input device.
