--- a/library.bib
+++ b/library.bib
@@ -2205,3 +2205,167 @@ year = {2013}
   year={2012},
   organization={ACM}
 }
+
+
+@ARTICLE{cheesman-84,
+  author = {Jim Cheesman and Philip M Merikle},
+  title = {priming with and without awareness},
+  journal = {Perception \& Psychophysics},
+  year = {1984},
+  volume = {36},
+  pages = {387-395},
+  number = {4},
+  timestamp = {2007.04.03}
+}
+
+@BOOK{book-98,
+  author = {John Doe and Jane Doe},
+  title = {Some very interesting book title},
+  year = {1998},
+  publisher = {Publisher}
+}
+
+@BOOK{apamanual,
+  author = {{\bibcorporate{American Psychological Association}}},
+  title = {Publication Manual of the American Psychological Association},
+  year = {2001},
+  publisher = {American Psychological Association},
+  edition = {5},
+  address = {Washington, DC}
+}
+
+@BOOK{apamanual2,
+  author = {{\bibcorporate{American Psychological Association}}},
+  title = {Concise Rules of APA Style},
+  year = {2005},
+  publisher = {American Psychological Association},
+  edition = {5},
+  address = {Washington, DC}
+}
+
+@BOOK{apamanual3,
+  author = {P M Houghton and M F Peters},
+  title = {APA: The Easy Way!},
+  year = {2005},
+  publisher = {Baker College},
+  address = {Port Huron, MI}
+}
+
+@INPROCEEDINGS{proceedings-90,
+	author = {Hans Muster},
+	title = {yet another title},
+	booktitle = {proceedings of a very important confrence},
+	year = {2008},
+}
+
+
+@inproceedings{bolt1982eyes,
+  title={Eyes at the interface},
+  author={Bolt, Richard A},
+  booktitle={Proceedings of the 1982 conference on Human factors in computing systems},
+  pages={360--362},
+  year={1982},
+  organization={ACM}
+}
+
+@article{ware1987evaluation,
+  title={An evaluation of an eye tracker as a device for computer input2},
+  author={Ware, Colin and Mikaelian, Harutune H},
+  journal={ACM SIGCHI Bulletin},
+  volume={18},
+  number={4},
+  pages={183--188},
+  year={1987},
+  publisher={ACM}
+}
+
+@inproceedings{mackenzie2008eye,
+  title={Eye typing using word and letter prediction and a fixation algorithm},
+  author={MacKenzie, I Scott and Zhang, Xuang},
+  booktitle={Proceedings of the 2008 symposium on Eye tracking research \& applications},
+  pages={55--58},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{isokoski2000text,
+  title={Text input methods for eye trackers using off-screen targets},
+  author={Isokoski, Poika},
+  booktitle={Proceedings of the 2000 symposium on Eye tracking research \& applications},
+  pages={15--21},
+  year={2000},
+  organization={ACM}
+}
+
+@incollection{argyros2004real,
+  title={Real-time tracking of multiple skin-colored objects with a possibly moving camera},
+  author={Argyros, Antonis A and Lourakis, Manolis IA},
+  booktitle={Computer Vision-ECCV 2004},
+  pages={368--379},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{adam1993virtual,
+  title={Virtual reality is for real},
+  author={Adam, John A},
+  journal={Spectrum, IEEE},
+  volume={30},
+  number={10},
+  pages={22--29},
+  year={1993},
+  publisher={IEEE}
+}
+
+@book{krueger1991artificial,
+  title={Artificial reality II},
+  author={Krueger, Myron W},
+  volume={10},
+  year={1991},
+  publisher={Addison-Wesley Reading (Ma)}
+}
+
+@inproceedings{buchmann2004fingartips,
+  title={FingARtips: gesture based direct manipulation in Augmented Reality},
+  author={Buchmann, Volkert and Violich, Stephen and Billinghurst, Mark and Cockburn, Andy},
+  booktitle={Proceedings of the 2nd international conference on Computer graphics and interactive techniques in Australasia and South East Asia},
+  pages={212--221},
+  year={2004},
+  organization={ACM}
+}
+
+@inproceedings{starner2000gesture,
+  title={The gesture pendant: A self-illuminating, wearable, infrared computer vision system for home automation control and medical monitoring},
+  author={Starner, Thad and Auxier, Jake and Ashbrook, Daniel and Gandy, Maribeth},
+  booktitle={Wearable Computers, The Fourth International Symposium on},
+  pages={87--94},
+  year={2000},
+  organization={IEEE}
+}
+
+@inproceedings{amento2002sound,
+  title={The sound of one hand: a wrist-mounted bio-acoustic fingertip gesture interface},
+  author={Amento, Brian and Hill, Will and Terveen, Loren},
+  booktitle={CHI'02 extended abstracts on Human factors in computing systems},
+  pages={724--725},
+  year={2002},
+  organization={ACM}
+}
+
+@inproceedings{schapira2001experimental,
+  title={Experimental evaluation of vision and speech based multimodal interfaces},
+  author={Schapira, Emilio and Sharma, Rajeev},
+  booktitle={Proceedings of the 2001 workshop on Perceptive user interfaces},
+  pages={1--9},
+  year={2001},
+  organization={ACM}
+}
+
+@inproceedings{nickel2003pointing,
+  title={Pointing gesture recognition based on 3D-tracking of face, hands and head orientation},
+  author={Nickel, Kai and Stiefelhagen, Rainer},
+  booktitle={Proceedings of the 5th international conference on Multimodal interfaces},
+  pages={140--146},
+  year={2003},
+  organization={ACM}
+}
